Fix dark mode blockquote contrast

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -22,6 +22,8 @@
 
 html[data-theme="dark"] {
   --ifm-background-color: #242526;
+
+  --ifm-blockquote-color: #fff;
 }
 
 .hero--primary {
